# takehome-kforce

./: .gitignore  README.md
.devcontainer/: devcontainer.json
app/: .isort.cfg  Dockerfile  Makefile  api.py  main.py  notebook.ipynb  pyproject.toml  pytest.ini  requirements.txt
app/jobs/: pandas_job.py
